@@ -189,7 +189,8 @@ void WindowOptions::setWinOption(const char *class_instance, const char *opt, co
             { 2, "startFullscreen", YFrameWindow::foFullscreen },
             { 2, "startMaximized", YFrameWindow::foMaximizedVert | YFrameWindow::foMaximizedHorz }, //
             { 2, "startMaximizedVert", YFrameWindow::foMaximizedVert }, //
-            { 2, "startMaximizedHorz", YFrameWindow::foMaximizedHorz } //
+            { 2, "startMaximizedHorz", YFrameWindow::foMaximizedHorz }, //
+            { 2, "nonICCCMconfigureRequest", YFrameWindow::foNonICCCMConfigureRequest }
         };
 
         for (unsigned int a = 0; a < ACOUNT(options); a++) {
