@@ -1,5 +1,7 @@
 1.2.6: 2003-xx-xx
 	- another submenu/icon handling fix for gnome menus (Thomas Zajic)
+	- added nonICCCMconfigureRequest window option workaround for 
+          non ICCCM compliant applications
 
 1.2.5: 2003-01-05
 	- fix lockup when doing operations through window list
